--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </header>
         <main>
-            <section class="hero bacg-img">
+            <section class="hero bacg-img ">
                 <div class="container hero-container">
                     <h1 class="hero-title">Effective Solutions
                         for Your Business</h1>
@@ -401,7 +401,7 @@
             </div>
             </div>
         </footer>
-        <div class="backdrop">
+        <div class="backdrop is-open">
             <div class="modal">
                 <button type="button" class="modal-btn">
                     <svg class="modal-btn-icon" width="28" height="28">
@@ -409,8 +409,7 @@
                     </svg>
                 </button>
                 <p class="modal-title section-title">
-                    LEAVE A REVIEW ABOUT
-                    <span>OUR CHOCOLATE</span>
+                Leave your contacts and we will call you back
                 </p>
                 <form class="modal-form">
                     <div class="modal-field">
