--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                     <div class="modal-field">
                         <label for="user-name" class="modal-label">Name</label>
                         <div class="input-wrap">
-                            <input type="text" name="user-name" class="modal-input" required minlength="2" id="user-name" />
+                            <input type="text" name="user-name" class="modal-input"  id="user-name" />
                             <svg class="modal-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-mail"></use>
                             </svg>
