--- a/index.html
+++ b/index.html
@@ -404,10 +404,11 @@
         <div class="backdrop is-open">
             <div class="modal">
                 <button type="button" class="modal-btn">
-                    <svg class="modal-btn-icon" width="28" height="28">
-                        <use href="./images/icons.svg#icon-x-close"></use>
+                    <svg class="modal-btn-icon" width="8" height="8">
+                        <use href="./images/symbol-defs.svg#icon-close-icon""></use>
                     </svg>
                 </button>
+                
                 <p class="modal-title section-title">
                 Leave your contacts and we will call you back
                 </p>
@@ -416,8 +417,8 @@
                         <label for="user-name" class="modal-label">Name</label>
                         <div class="input-wrap">
                             <input type="text" name="user-name" class="modal-input"  id="user-name" />
-                            <svg class="modal-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-mail"></use>
+                            <svg class="modal-icon" width="18" height="18">
+                                <use href="./images/symbol-defs.svg#icon-piple"></use>
                             </svg>
                         </div>
                     </div>
