--- a/index.html
+++ b/index.html
@@ -424,16 +424,37 @@
                     </div>
                     <div class="modal-field">
                         <label for="user-email" class="modal-label">Email</label>
-                        <input type="email" name="user-email" class="modal-input" placeholder="Enter email" id="user-email" />
+                        <div class="input-wrap">
+                        <input type="email" name="user-email" class="modal-input" placeholder="" id="user-email" />
+                    <svg class="modal-icon" width="18" height="18">
+                        <use href="./images/symbol-defs.svg#icon-email-icon"></use>
+                    </svg>
+                    </div>
                     </div>
                     <div class="modal-field">
                         <label for="user-phone" class="modal-label">Phone number</label>
-                        <input type="tel" name="user-phone" class="modal-input" placeholder="Enter phone number" required
-                            maxlength="15" value="+380" id="user-phone" />
+                        <div class="input-wrap">
+                        <input type="tel" name="user-phone" class="modal-input" placeholder="" required
+                            maxlength="15" value="" id="user-phone" />
+                            <svg class="modal-icon" width="18" height="18">
+                                <use href="./images/symbol-defs.svg#icon-phone"></use>
+                            </svg>
+                            </div>
                     </div>
                     <div class="modal-field">
                         <label for="user-text" class="modal-label">Comment</label>
-                        <textarea name="user-text" id="user-text" class="modal-textarea" placeholder="Enter text"></textarea>
+                        <textarea name="user-text" id="user-text" class="modal-textarea" placeholder="Text input"></textarea>
+                    </div>
+                    <div class="modal-field">
+                        <input class="modal-check visually-hidden" type="checkbox" name="terms" id="terms" required />
+                        <label class="check-text" for="terms">
+                            <span class="check-text-box">
+                                <svg class="check-text-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-click"></use>
+                                </svg>
+                            </span>
+                            I accept the terms and conditions of the 
+                            <a href="">Privacy Policy</a></label>
                     </div>
                     <button type="submit" class="modal-form-btn">Send</button>
                 </form>
