--- a/index.html
+++ b/index.html
@@ -454,8 +454,8 @@
                                 </svg>
                             </span>
                             I accept the terms and conditions of the 
-                            <a href="">Privacy Policy</a></label>
-                    </div>
+                            <a class="check-text-box-link" href="">Privacy Policy</a></label>
+                    </div class="modal-form-btn-psision">
                     <button type="submit" class="modal-form-btn">Send</button>
                 </form>
             </div>
