--- a/index.html
+++ b/index.html
@@ -455,8 +455,10 @@
                             </span>
                             I accept the terms and conditions of the 
                             <a class="check-text-box-link" href="">Privacy Policy</a></label>
-                    </div class="modal-form-btn-psision">
+                    </div>
+                    <div class="modal-form-btn-psision">
                     <button type="submit" class="modal-form-btn">Send</button>
+                    </div>
                 </form>
             </div>
         </div>
