--- a/index.html
+++ b/index.html
@@ -399,9 +399,21 @@
 
                 </ul>
             </div>
+            <div class="footer-sibsribe">
+                <p class="footer-input-title">Subscribe</p>
+                 <form class="footer-form">
+    <label aria-label="footer input">
+        <input type="email" name="footer-email" placeholder="E-mail" class="footer-form-input" />
+    </label>
+    <button type="submit" class="footer-form-btn">Subscribe
+        <svg class="footer-form-btn-icon" width="24" height="24">
+        <use href="./images/icons.svg#icon-fly"></use></svg>
+    </button>
+</form>
+            </div>
             </div>
         </footer>
-        <div class="backdrop is-open">
+        <div class="backdrop ">
             <div class="modal">
                 <button type="button" class="modal-btn">
                     <svg class="modal-btn-icon" width="8" height="8">
@@ -421,6 +433,12 @@
                                 <use href="./images/symbol-defs.svg#icon-piple"></use>
                             </svg>
                         </div>
+                        <form class="footer-form">
+                            <label aria-label="footer input">
+                                <input type="email" name="footer-email" placeholder="Enter your email" class="footer-form-input" />
+                            </label>
+                            <button type="submit" class="footer-form-btn">Subscribe</button>
+                        </form>
                     </div>
                     <div class="modal-field">
                         <label for="user-email" class="modal-label">Email</label>
@@ -452,6 +470,7 @@
                                 <svg class="check-text-icon" width="16" height="16">
                                     <use href="./images/icons.svg#icon-click"></use>
                                 </svg>
+
                             </span>
                             I accept the terms and conditions of the 
                             <a class="check-text-box-link" href="">Privacy Policy</a></label>
