--- a/index.html
+++ b/index.html
@@ -405,9 +405,9 @@
     <label aria-label="footer input">
         <input type="email" name="footer-email" placeholder="E-mail" class="footer-form-input" />
     </label>
-    <button type="submit" class="footer-form-btn">Subscribe
+    <button type="submit" class="footer-form-btn">Subscribe<span>
         <svg class="footer-form-btn-icon" width="24" height="24">
-        <use href="./images/icons.svg#icon-fly"></use></svg>
+        <use href="./images/icons.svg#icon-fly"></use></svg></span>
     </button>
 </form>
             </div>
@@ -433,12 +433,6 @@
                                 <use href="./images/symbol-defs.svg#icon-piple"></use>
                             </svg>
                         </div>
-                        <form class="footer-form">
-                            <label aria-label="footer input">
-                                <input type="email" name="footer-email" placeholder="Enter your email" class="footer-form-input" />
-                            </label>
-                            <button type="submit" class="footer-form-btn">Subscribe</button>
-                        </form>
                     </div>
                     <div class="modal-field">
                         <label for="user-email" class="modal-label">Email</label>
@@ -467,8 +461,8 @@
                         <input class="modal-check visually-hidden" type="checkbox" name="terms" id="terms" required />
                         <label class="check-text" for="terms">
                             <span class="check-text-box">
-                                <svg class="check-text-icon" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-click"></use>
+                                <svg class="check-text-icon" width="12" height="12">
+                                    <use href="./images/icons.svg#icon-Vector"></use>
                                 </svg>
 
                             </span>
