--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
             <div class="modal">
                 <button type="button" class="modal-btn">
                     <svg class="modal-btn-icon" width="8" height="8">
-                        <use href="./images/symbol-defs.svg#icon-close-icon""></use>
+                        <use href="./images/symbol-defs.svg#icon-close-icon"></use>
                     </svg>
                 </button>
                 
