--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             <div class="footer-sibsribe">
                 <p class="footer-input-title">Subscribe</p>
                  <form class="footer-form">
-    <label aria-label="footer input">
+    <label aria-label="footer input" class="footer-form-label">
         <input type="email" name="footer-email" placeholder="E-mail" class="footer-form-input" />
     </label>
     <button type="submit" class="footer-form-btn">Subscribe<span>
