--- a/index.html
+++ b/index.html
@@ -405,9 +405,9 @@
     <label aria-label="footer input" class="footer-form-label">
         <input type="email" name="footer-email" placeholder="E-mail" class="footer-form-input" />
     </label>
-    <button type="submit" class="footer-form-btn">Subscribe<span>
+    <button type="submit" class="footer-form-btn">Subscribe
         <svg class="footer-form-btn-icon" width="24" height="24">
-        <use href="./images/icons.svg#icon-fly"></use></svg></span>
+        <use href="./images/icons.svg#icon-fly"></use></svg>
     </button>
 </form>
             </div>
