--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                         <label for="user-name" class="modal-label">Name</label>
                         <div class="input-wrap">
                             <input type="text" name="user-name" class="modal-input"  id="user-name" />
-                            <svg class="modal-icon" width="18" height="18">
+                            <svg class="modal-icon" width="18" height="24">
                                 <use href="./images/symbol-defs.svg#icon-piple"></use>
                             </svg>
                         </div>
@@ -444,7 +444,7 @@
                     </div>
                     </div>
                     <div class="modal-field">
-                        <label for="user-phone" class="modal-label">Phone number</label>
+                        <label for="user-phone" class="modal-label">Phone</label>
                         <div class="input-wrap">
                         <input type="tel" name="user-phone" class="modal-input" placeholder="" required
                             maxlength="15" value="" id="user-phone" />
