--- a/index.html
+++ b/index.html
@@ -448,14 +448,14 @@
                         <div class="input-wrap">
                         <input type="tel" name="user-phone" class="modal-input" placeholder="" required
                             maxlength="15" value="" id="user-phone" />
-                            <svg class="modal-icon" width="18" height="18">
+                            <svg class="modal-icon" width="18" height="24">
                                 <use href="./images/symbol-defs.svg#icon-phone"></use>
                             </svg>
                             </div>
                     </div>
                     <div class="modal-field">
-                        <label for="user-text" class="modal-label">Comment</label>
-                        <textarea name="user-text" id="user-text" class="modal-textarea" placeholder="Text input"></textarea>
+                        <label for="user-comment" class="modal-label">Comment</label>
+                        <textarea name="user-comment" id="user-comment" class="modal-textarea" placeholder="Text input"></textarea>
                     </div>
                     <div class="modal-field">
                         <input class="modal-check visually-hidden" type="checkbox" name="terms" id="terms" required />
