--- a/index.html
+++ b/index.html
@@ -457,9 +457,9 @@
                         <label for="user-comment" class="modal-label">Comment</label>
                         <textarea name="user-comment" id="user-comment" class="modal-textarea" placeholder="Text input"></textarea>
                     </div>
-                    <div class="modal-field">
-                        <input class="modal-check visually-hidden" type="checkbox" name="terms" id="terms" required />
-                        <label class="check-text" for="terms">
+                    <div class="modal-field modal-check-container">
+                        <input class="modal-check visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true" required />
+                        <label class="check-text" for="user-privacy">
                             <span class="check-text-box">
                                 <svg class="check-text-icon" width="12" height="12">
                                     <use href="./images/icons.svg#icon-Vector"></use>
