--- a/index.html
+++ b/index.html
@@ -435,21 +435,21 @@
                         </div>
                     </div>
                     <div class="modal-field">
-                        <label for="user-email" class="modal-label">Email</label>
+                        <label for="user-email" class="modal-label">Phone</label>
                         <div class="input-wrap">
                         <input type="email" name="user-email" class="modal-input" placeholder="" id="user-email" />
                     <svg class="modal-icon" width="18" height="18">
-                        <use href="./images/symbol-defs.svg#icon-email-icon"></use>
+                        <use href="./images/symbol-defs.svg#icon-phone"></use>
                     </svg>
                     </div>
                     </div>
                     <div class="modal-field">
-                        <label for="user-phone" class="modal-label">Phone</label>
+                        <label for="user-phone" class="modal-label">Email</label>
                         <div class="input-wrap">
                         <input type="tel" name="user-phone" class="modal-input" placeholder="" required
                             maxlength="15" value="" id="user-phone" />
                             <svg class="modal-icon" width="18" height="24">
-                                <use href="./images/symbol-defs.svg#icon-phone"></use>
+                                <use href="./images/symbol-defs.svg#icon-email-icon"></use>
                             </svg>
                             </div>
                     </div>
