--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                         <label class="check-text" for="user-privacy">
                             <span class="check-text-box">
                                 <svg class="check-text-icon" width="10" height="8">
-                                    <use href="./images/icons.svg#icon-Vector"></use>
+                                    <use href="./images/icons.svg#icon-vector"></use>
                                 </svg>
 
                             </span>
