--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                         <label for="user-comment" class="modal-label">Comment</label>
                         <textarea name="user-comment" id="user-comment" class="modal-textarea" placeholder="Text input"></textarea>
                     </div>
-                    <div class="modal-field ">
+                    <div class="modal-field  modal-field-check">
                         <input class="modal-check visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true" required />
                         <label class="check-text" for="user-privacy">
                             <span class="check-text-box">
