--- a/index.html
+++ b/index.html
@@ -407,13 +407,13 @@
     </label>
     <button type="submit" class="footer-form-btn">Subscribe
         <svg class="footer-form-btn-icon" width="24" height="24">
-        <use href="./images/icons.svg#icon-fly"></use></svg>
+        <use href="./images/icons.svg#icon-flyer-1"></use></svg>
     </button>
 </form>
             </div>
             </div>
         </footer>
-        <div class="backdrop is-open ">
+        <div class="backdrop is-open">
             <div class="modal">
                 <button type="button" class="modal-btn">
                     <svg class="modal-btn-icon" width="8" height="8">
@@ -421,7 +421,7 @@
                     </svg>
                 </button>
                 
-                <p class="modal-title section-title">
+                <p class="modal-title section-title" >
                 Leave your contacts and we will call you back
                 </p>
                 <form class="modal-form">
@@ -462,7 +462,7 @@
                         <label class="check-text" for="user-privacy">
                             <span class="check-text-box">
                                 <svg class="check-text-icon" width="10" height="8">
-                                    <use href="./images/icons.svg#icon-vector"></use>
+                                    <use href="./images/icons.svg#icon-check-1"></use>
                                 </svg>
 
                             </span>
