--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
     </label>
     <button type="submit" class="footer-form-btn">Subscribe
         <svg class="footer-form-btn-icon" width="24" height="24">
-        <use href="./images/icons.svg#icon-flyer-1"></use></svg>
+        <use href="./images/symbol-defs.svg#icon-fly"></use></svg>
     </button>
 </form>
             </div>
@@ -462,7 +462,7 @@
                         <label class="check-text" for="user-privacy">
                             <span class="check-text-box">
                                 <svg class="check-text-icon" width="10" height="8">
-                                    <use href="./images/icons.svg#icon-check-1"></use>
+                                    <use href="./images/symbol-defs.svg#icon-check-1"></use>
                                 </svg>
 
                             </span>
